# oh-my-symphony

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  NOTICE  PLAN.md  README.ko.md  README.md  WORKFLOW.example.md  WORKFLOW.file.example.md  WORKFLOW.jira.example.md  WORKFLOW.md  pyproject.toml  tui-open.sh
.claude/skills/: symphony-skill
.githooks/: pre-commit  pre-push
.github/workflows/: pages.yml  tests.yml
.omc/: RELEASE_RULE.md
.symphony/: commit-message.txt
docs/: PIPELINE-DEMO.md  PIPELINE.md  PRD-telemetry-and-sessions.md  architecture.md  index.html
docs/SMA-26/: diagnosis.md
docs/changelog/: 2026-07-02-crash-safe-orchestrator-state-delivery-proof.md  2026-07-02-post-e2e-hardening-delivery-proof.md  2026-07-02-r2-r7-backend-lifecycle-delivery-proof.md  2026-07-02-r4-tracker-retry-delivery-proof.md  2026-07-02-r5-file-tracker-locking-delivery-proof.md  2026-07-02-r6-persisted-safety-valves-delivery-proof.md  2026-07-03-opencode-backend-delivery-proof.md  2026-07-03-operator-trust-delivery-proof.md  2026-07-05-continuous-improvement-heartbeat-delivery-proof.md  changelog-2026-07-02.md  changelog-2026-07-03.md  changelog-2026-07-04.md  changelog-2026-07-05.md  changelog-2026-07-09.md  changelog-2026-07-10.md  changelog-2026-07-11.md  changelog-2026-07-12.md  changelog-2026-07-13.md  changelog-2026-07-17.md  changelog-2026-07-18.md
docs/continuous-improvement/: latest.md  rubric.md  ticket-template.md
docs/dispatch-stability/: G1-stale-claimed-prune.md  G2-empty-response-loop.md  G3-wait-age-bump.md  G4-tui-file-logging.md  G5-strip-on-restore.md  README.md
docs/handoffs/: 2026-07-13-0753-factory-bundled-skills.md
docs/improvements/: architecture-improvement-plan-2026-07-05.md  dispatch-double-dispatch-race-2026-06-28.md  dispatch-stability-2026-05-20.md  improvement-plan-2026-07-07.md  improvement-plan-2026-07-09.md  supergoal-hardening-2026-06.md  supergoal-hardening-proof.md  supergoal-learnings-2026-06.md
docs/llm-wiki/: INDEX.md  agent-observability.md  orchestrator-phase-transition.md  release-version-bump.md  session-persistence.md  workspace-auto-commit-excludes.md
docs/plans/: 2026-07-02-4-stage-pipeline-simplification.md  2026-07-02-post-e2e-hardening-plan.md  2026-07-02-reliability-availability-usability.md  2026-07-02-reliability-handoff.md  2026-07-03-e2e-hardening-implementation-brief.md  2026-07-03-four-agent-rerun-release-blockers.md  2026-07-03-four-agent-todo-e2e-production-hardening.md  2026-07-03-opencode-stall-loop-fix.md  2026-07-03-operator-trust-implementation.md  2026-07-04-jira-symphony-token-reliability-plan.md  (+3 more)
examples/: WORKFLOW.aidt.example.md  WORKFLOW.jira.example.md  WORKFLOW.smoke.md
scripts/: git_quality_gate.py  smoke_web_api.py  static_todo_browser_acceptance.py  symphony-setup-worktree.sh
tests/: aidt_provisioner_support.py  aidt_routing_support.py  test_after_run_classifier.py  test_agent_lifecycle_e2e.py  test_aidt_delivery_contract.py  test_aidt_route_dispatch_contract.py  test_aidt_routing_contract.py  test_aidt_routing_decision.py  test_aidt_routing_git_objects.py  test_aidt_routing_runtime.py  test_aidt_routing_storage.py  test_aidt_workflow_example.py  test_aidt_worktree_contract.py  test_aidt_worktree_core_integration.py  test_aidt_worktree_git_state.py  test_aidt_worktree_manifest.py  test_aidt_worktree_provisioner.py  test_aidt_worktree_recovery_proofs.py  test_aidt_worktree_runtime.py  test_archive.py  test_auto_merge.py  test_backend_contract.py  test_backends.py  test_backends_edges.py  test_backends_lifecycle.py  test_board_cli.py  test_board_cli_subcommands.py  test_board_viewer.py  test_cli_lazy_imports.py  test_cli_main_routing.py  test_cli_run_startup.py  test_codex_approvals.py  test_continuous_improvement.py  test_dispatch_state.py  test_doctor.py  test_git_quality_gate.py  test_jira_intake.py  test_keep_awake.py  test_logging.py  test_notifications.py  (+36 more)
(+477 files in other folders)
