[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-symphony"
version = "0.10.0"
description = "Multi-agent fork of OpenAI Symphony — supports Codex CLI, Claude Code CLI, Gemini CLI, OpenCode CLI, and Pi CLI behind one local Kanban orchestrator with TUI and web board."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "oh-my-symphony" }]
dependencies = [
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "watchdog>=4.0",
    "aiohttp>=3.9",
    "rich>=13.7",
    "textual>=0.85",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
browser = [
    "playwright>=1.48",
]

[project.scripts]
symphony = "symphony.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
symphony = ["web/static/*", "web/static/*/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "browser_e2e: browser-driven web UI tests; requires SYMPHONY_BROWSER_E2E=1 and Playwright browser binaries",
]
